[package]
name = "minicoap"
version = "0.1.0"
edition = "2024"
description = "A tiny, zero-copy Rust library for parsing and building CoAP (Constrained Application Protocol) messages."
categories = ["embedded", "network-programming", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jack-weilage/minicoap"

[dependencies]
num_enum = { version = "0.7.4", default-features = false }

defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]
